--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.smallstone</groupId>
-    <artifactId>springboot-mall</artifactId>
+    <artifactId>springboot-mall-1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboot-mall</name>
+    <name>springboot-mall-1</name>
     <description>Spring Boot Mall project</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>8</java.version>
     </properties>
     <dependencies>
         <dependency>
